Revert "Fix source column - align the background to the left"
This reverts commit b608399e

--- a/client/style.scss
+++ b/client/style.scss
@@ -53,6 +53,7 @@
 
 	.payment-method__brand {
 		display: block;
+		margin: 0 auto;
 	}
 }
 
